<resources xmlns:ns0="urn:oasis:names:tc:xliff:document:1.2">
    <string name="permissions_rationale_title">Network Survey Permissions</string>
    <string name="permissions_rationale">The Network Survey app requires a few permissions to work.  Denying these permissions will result in the app not functioning properly.
        \n\n1. <b>Make and Manage Phone Calls</b>:  This app does not make or manage phone calls.  Instead, it needs this permission to get access to the current cellular connection type (e.g. LTE vs UMTS).
        \n\n2. <b>Access this Device\'s Location</b>:  The location permission is needed to access Wi-Fi details, Cellular details, GNSS details, and also to write geo-relevant log files.
        \n\n3. <b>Access Photos, Media, and Files on Your Device</b>:  This permission allows the log file to be written.
        \n\n4. <b>Notifications</b>:  This permission allows NS to add a notification so you know when a survey is running in the background.</string>
    <string name="cdr_required_permissions_rationale_title">CDR Required Permissions</string>
    <string name="upload_to_opencellid">Upload to OpenCelliD (Cellular)</string>
    <string name="anonymously">Anonymously</string>
    <string name="upload_dialog_message">Uploading your survey records will share location data with third-party services. Contributing to these crowdsourced databases helps improve coverage maps and geolocation accuracy. Your participation is entirely voluntary; the choice to share your data is yours and yours alone.</string>
    <string name="access_token_warning">You have to enter a valid access token in preferences</string>
    <string name="upload_to_beacondb">Upload to BeaconDB (Cellular &amp; Wi-Fi)</string>
    <string name="retry_on_failure">Retry on failure</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="settings">Settings</string>
    <string name="mqtt_start_on_boot_title">MQTT Start at Boot</string>
    <string name="mqtt_start_on_boot_description">If true, when the phone boots an attempt will be made to connect to the MDM configured MQTT broker</string>
    <string name="mqtt_client_id_title">MQTT Client ID</string>
    <string name="mqtt_client_id_description">The name this device should use to represent itself to the MQTT broker</string>
    <string name="mqtt_username_title">MQTT Broker Username</string>
    <string name="mqtt_username_description">The username to use when authenticating to the MQTT broker</string>
    <string name="mqtt_password_title">MQTT Broker Password</string>
    <string name="mqtt_password_description">The password to use when authenticating to the MQTT broker</string>
    <string name="mdm_override_title">MDM Override</string>
    <string name="mdm_override_summary_on">Network Survey is controlled via MDM, but now some of the MDM settings can be overridden</string>
    <string name="mdm_override_summary_off">Network Survey is controlled via MDM</string>
    <string name="logging_config_title">Logging Config</string>
    <string name="log_rollover_title">Log Rollover Size (MB)</string>
    <string name="log_file_title">Log File Type</string>
    <string name="auto_start_cellular_logging_title">Auto Start Cellular Logging</string>
    <string name="auto_start_cellular_logging_summary_on">Cellular logging will be started upon app opening or when the phone is turned on</string>
    <string name="auto_start_cellular_logging_summary_off">Cellular logging will only start when manually enabled</string>
    <string name="auto_start_wifi_logging_title">Auto Start Wi-Fi Logging</string>
    <string name="auto_start_wifi_logging_summary_on">Wi-Fi logging will be started upon app opening or when the phone is turned on</string>
    <string name="auto_start_wifi_logging_summary_off">Wi-Fi logging will only start when manually enabled</string>
    <string name="auto_start_bluetooth_logging_title">Auto Start Bluetooth Logging</string>
    <string name="auto_start_bluetooth_logging_summary_on">Bluetooth logging will be started upon app opening or when the phone is turned on</string>
    <string name="auto_start_bluetooth_logging_summary_off">Bluetooth logging will only start when manually enabled</string>
    <string name="auto_start_gnss_logging_title">Auto Start GNSS Logging</string>
    <string name="auto_start_gnss_logging_summary_on">GNSS logging will be started upon app opening or when the phone is turned on</string>
    <string name="auto_start_gnss_logging_summary_off">GNSS logging will only start when manually enabled</string>
    <string name="auto_start_cdr_logging_title">Auto Start CDR Logging</string>
    <string name="auto_start_cdr_logging_summary_on">CDR logging will be started upon app opening or when the phone is turned on</string>
    <string name="auto_start_cdr_logging_summary_off">CDR logging will only start when manually enabled</string>
    <string name="cellular_scan_interval_title">Cellular Scan Interval</string>
    <string name="cellular_scan_interval_description">The rate at which Cellular towers will be scanned for in seconds. Smaller values will decrease battery life.</string>
    <string name="wifi_scan_interval_title">Wi-Fi Scan Interval</string>
    <string name="wifi_scan_interval_description">The rate at which Wi-Fi networks will be scanned for in seconds. Smaller values will decrease battery life.</string>
    <string name="bluetooth_scan_interval_title">Bluetooth Scan Interval</string>
    <string name="bluetooth_scan_interval_description">The rate at which Bluetooth devices will be scanned for in seconds. Minimum value is 23 seconds due to BLE (10s) and Classic (12s) scan durations. Smaller values will decrease battery life.</string>
    <string name="gnss_scan_interval_title">GNSS Scan Interval</string>
    <string name="gnss_scan_interval_description">The rate at which GNSS satellites will be scanned for in seconds. Smaller values will decrease battery life.</string>
    <string name="device_status_scan_interval_title">Device Status Message Interval</string>
    <string name="device_status_scan_interval_description">The rate at which Device Status messages will be generated in seconds.</string>
    <string name="mqtt_connection_config_title">MQTT Connection Config</string>
    <string name="location_config_title">Location Config</string>
    <string name="location_provider_title">Location Provider</string>
    <string name="location_provider_description">Specifies what provider to use for getting the device\'s location. The devices location is added to log files and MQTT messages.\n\n
        <b>FUSED</b>: Combines inputs from GNSS and NETWORK location providers to provide the most battery efficient location fix, but can be less accurate.\n\n
        <b>GNSS</b>: Determines location using GNSS satellites (e.g. GPS). This uses more battery than NETWORK based, but is typically more accurate.\n\n
        <b>NETWORK</b>: Determines location based on nearby cell towers and Wi-Fi access points.\n\n
        <b>ALL</b>: Uses all the location providers and adds each location to the device status message, which results in multiple locations written in the device status message. Useful if you want to compare the locations for analysis purpose; or the best possible location fix.\n\n
    </string>
    <string name="security_config_title">Security Config</string>
    <string name="allow_intent_control_title">Allow other apps to Start NS</string>
    <string name="allow_intent_control_summary_on">Other apps can start Network Survey</string>
    <string name="allow_intent_control_summary_off">Other apps will be blocked from starting Network Survey</string>
    <string name="tower_map_config_title">Tower Map Config</string>
    <string name="display_coverage_area_title">Display Serving Cell Coverage</string>
    <string name="display_coverage_area_summary_on">Serving cell coverage will be displayed on the map</string>
    <string name="display_coverage_area_summary_off">Serving cell coverage won\'t be displayed on the map</string>
    <string name="coverage_circle_color_title">Coverage Circle Color</string>
    <string name="coverage_circle_color_dialog_title">Select Coverage Circle Color</string>
    <string name="new_tower_alerts_title">New Tower Alerts</string>
    <string name="new_tower_alerts_summary_off">Notifications disabled for new cellular towers</string>
    <string name="new_tower_alerts_summary_on">Receive notifications when connected to a tower that hasn\'t been uploaded to the OpenCelliD database yet (requires upload scanning to be active)</string>
    <string name="auto_start_community_upload_survey_title">Auto Start Survey on Phone Reboot</string>
    <string name="auto_start_community_upload_survey_summary_off">Community Survey\'s will only start when manually enabled</string>
    <string name="auto_start_community_upload_survey_summary_on">Community Survey\'s will be started when the phone is rebooted</string>
    <string name="auto_start_mqtt_summary_on">The MQTT connection will be started when the phone is booted (Note that a valid MQTT broker must be configured in the connection UI)</string>
    <string name="auto_start_mqtt_summary_off">The MQTT connection will only be started manually</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_preference_summary">Click here to view the privacy policy</string>
    <string name="acknowledgments_title">Acknowledgments</string>
    <string name="acknowledgments_summary">Recognition of open source contributions</string>
    <string name="not_supported_title">GNSS Features May Not Work</string>
    <string name="not_supported_description">Network Survey is not receiving raw GNSS measurements from the phone, which are required for generating the GNSS GeoPackage/CSV files, or streaming GNSS records over MQTT. For more information and a list of devices that support raw GNSS, consult Android\'s <a href="https://developer.android.com/guide/topics/sensors/gnss">Raw GNSS Measurements</a> guide.</string>
    <string name="remember_my_decision">Don\'t ask me again</string>
    <string name="show_upload_dialog_pref_title">Show Upload Config Dialog</string>
    <string name="show_upload_dialog_summary_off">Upload dialog will be skipped and the settings below will be used</string>
    <string name="show_upload_dialog_summary_on">The config dialog will be shown before each upload</string>
    <string name="battery_optimization_settings_title">Battery Optimization</string>
    <string name="battery_pause_title">Pause scanning on low battery</string>
    <string name="battery_pause_description">Slide to set the battery level at which all survey operations will pause. Set to 0 to disable pausing. Operations will automatically resume when the battery level rises above this threshold after charging.</string>
    <string name="ssid_exclusion_list_title">SSID Exclusion List</string>
    <string name="ssid_exclusion_list_description">Choose SSIDs to leave out of saved and uploaded survey data. Excluded networks still appear in the Wi-Fi list</string>
</resources>