<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:icon="@drawable/ic_mdm_control"
        app:isPreferenceVisible="false"
        app:key="mqtt_mdm_override"
        app:summaryOff="@string/mdm_override_summary_off"
        app:summaryOn="@string/mdm_override_summary_on"
        app:title="@string/mdm_override_title" />

    <PreferenceCategory
        app:icon="@drawable/logging_thick_icon"
        app:key="logging_config"
        app:title="@string/logging_config_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_cellular"
            app:key="auto_start_logging"
            app:summaryOff="@string/auto_start_cellular_logging_summary_off"
            app:summaryOn="@string/auto_start_cellular_logging_summary_on"
            app:title="@string/auto_start_cellular_logging_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_wifi"
            app:key="auto_start_wifi_logging"
            app:summaryOff="@string/auto_start_wifi_logging_summary_off"
            app:summaryOn="@string/auto_start_wifi_logging_summary_on"
            app:title="@string/auto_start_wifi_logging_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_bluetooth"
            app:key="auto_start_bluetooth_logging"
            app:summaryOff="@string/auto_start_bluetooth_logging_summary_off"
            app:summaryOn="@string/auto_start_bluetooth_logging_summary_on"
            app:title="@string/auto_start_bluetooth_logging_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_gnss"
            app:key="auto_start_gnss_logging"
            app:summaryOff="@string/auto_start_gnss_logging_summary_off"
            app:summaryOn="@string/auto_start_gnss_logging_summary_on"
            app:title="@string/auto_start_gnss_logging_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_cdr"
            app:key="auto_start_cdr_logging"
            app:summaryOff="@string/auto_start_cdr_logging_summary_off"
            app:summaryOn="@string/auto_start_cdr_logging_summary_on"
            app:title="@string/auto_start_cdr_logging_title" />

        <DropDownPreference
            app:defaultValue="10"
            app:entries="@array/log_rollover_size_labels"
            app:entryValues="@array/log_rollover_size_values"
            app:icon="@drawable/log_rollover_icon"
            app:isPreferenceVisible="true"
            app:key="log_rollover_size_mb"
            app:title="@string/log_rollover_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2"
            app:dialogTitle="@string/log_file_title"
            app:entries="@array/log_file_option_labels"
            app:entryValues="@array/log_file_option_index"
            app:icon="@drawable/ic_log_file"
            app:key="log_file_type"
            app:useSimpleSummaryProvider="true"
            app:title="@string/log_file_title" />

        <Preference
            app:key="upload_preferences_group"
            app:title="Upload Settings"
            app:summary="Configure data upload options including OpenCelliD API key"
            app:fragment="com.craxiom.networksurvey.fragments.UploadSettingsFragment" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_cloud_connection"
        app:key="ns_analytics_config"
        app:title="NS Analytics">

        <Preference
            app:key="ns_analytics_connection"
            app:title="Connection Settings"
            app:summary="Manage NS Analytics connection and device registration" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_interval"
        app:key="scan_interval_config"
        app:title="@string/scan_interval_config_title">

        <EditTextPreference
            app:defaultValue="5"
            app:dialogMessage="@string/cellular_scan_interval_description"
            app:key="cellular_scan_interval_seconds"
            app:title="@string/cellular_scan_interval_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="10"
            app:dialogMessage="@string/wifi_scan_interval_description"
            app:key="wifi_scan_interval_seconds"
            app:title="@string/wifi_scan_interval_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="30"
            app:dialogMessage="@string/bluetooth_scan_interval_description"
            app:key="bluetooth_scan_interval_seconds"
            app:title="@string/bluetooth_scan_interval_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="30"
            app:dialogMessage="@string/gnss_scan_interval_description"
            app:key="gnss_scan_interval_seconds"
            app:title="@string/gnss_scan_interval_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="120"
            app:dialogMessage="@string/device_status_scan_interval_description"
            app:key="device_status_scan_interval_seconds"
            app:title="@string/device_status_scan_interval_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_cloud_connection"
        app:key="mqtt_connection_config"
        app:title="@string/mqtt_connection_config_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="mqtt_start_on_boot"
            app:summaryOff="@string/auto_start_mqtt_summary_off"
            app:summaryOn="@string/auto_start_mqtt_summary_on"
            app:title="@string/mqtt_start_on_boot_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_my_location"
        app:key="location_config"
        app:title="@string/location_config_title">

        <ListPreference
            android:dialogLayout="@layout/custom_list_preference_layout"
            app:defaultValue="3"
            app:dialogTitle="@string/location_provider_title"
            app:dialogMessage="@string/location_provider_description"
            app:entries="@array/location_provider_option_labels"
            app:entryValues="@array/location_provider_option_index"
            app:key="location_provider"
            app:useSimpleSummaryProvider="true"
            app:title="@string/location_provider_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_security_24"
        app:key="security"
        app:title="@string/security_config_title">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="allow_intent_control"
            app:summaryOff="@string/allow_intent_control_summary_off"
            app:summaryOn="@string/allow_intent_control_summary_on"
            app:title="@string/allow_intent_control_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_cell_tower"
        app:key="tower_map"
        app:title="@string/tower_map_config_title">

        <Preference
            app:key="tower_map_preferences_group"
            app:title="Tower Map Settings"
            app:summary="Configure tower map options"
            app:fragment="com.craxiom.networksurvey.fragments.TowerMapSettingsFragment" />

    </PreferenceCategory>

    <!--<PreferenceCategory
        app:icon="@drawable/ic_survey_monitor"
        app:key="survey_monitor"
        app:title="@string/survey_monitor_config_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="alert_new_tower"
            app:title="@string/alert_new_tower_title"
            app:summary="@string/alert_new_tower_summary" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="alert_new_tower_sound"
            app:dependency="alert_new_tower"
            app:title="@string/alert_new_tower_sound_title" />

        <Preference
            app:key="alert_new_tower_ringtone"
            app:dependency="alert_new_tower_sound"
            app:title="@string/alert_new_tower_ringtone_title"
            app:summary="Select notification sound" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="alert_new_tower_vibrate"
            app:dependency="alert_new_tower"
            app:title="@string/alert_new_tower_vibrate_title" />

    </PreferenceCategory>-->

    <PreferenceCategory
        app:icon="@drawable/ic_wifi"
        app:key="wifi_settings"
        app:title="Wi-Fi Settings">

        <Preference
            app:key="ssid_exclusion_list"
            app:title="@string/ssid_exclusion_list_title"
            app:summary="@string/ssid_exclusion_list_description" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@android:drawable/ic_lock_idle_low_battery"
        app:key="battery_settings"
        app:title="Battery Settings">

        <Preference
            app:key="battery_optimization"
            app:title="@string/battery_optimization_settings_title" />

        <com.craxiom.networksurvey.ui.BatteryThresholdPreference
            app:defaultValue="0"
            app:dialogMessage="@string/battery_pause_description"
            app:key="battery_threshold_percent"
            app:title="@string/battery_pause_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_info"
        app:key="about"
        app:title="About">

        <Preference
            app:key="app_version"
            app:title="Version"
            app:defaultValue="None" />

        <Preference
            app:key="preference_device_serial_number"
            app:title="Device Serial Number"
            app:defaultValue="None" />

        <Preference
            app:key="app_instance_id"
            app:title="App Instance ID"
            app:defaultValue="None" />

        <Preference
            app:key="privacy_policy"
            app:title="@string/privacy_policy"
            app:summary="@string/privacy_policy_preference_summary" />

        <Preference
            app:key="acknowledgments"
            app:title="@string/acknowledgments_title"
            app:summary="@string/acknowledgments_summary" />

    </PreferenceCategory>

</PreferenceScreen>