<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="general_tower_map_settings"
        app:title="@string/settings">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="map_display_serving_cell_coverage_area"
            app:title="@string/display_coverage_area_title"
            app:summaryOff="@string/display_coverage_area_summary_off"
            app:summaryOn="@string/display_coverage_area_summary_on" />

        <com.craxiom.networksurvey.ui.ColorListPreference
            app:defaultValue="default"
            app:dialogTitle="@string/coverage_circle_color_dialog_title"
            app:entries="@array/coverage_circle_color_labels"
            app:entryValues="@array/coverage_circle_color_values"
            app:key="map_coverage_circle_color"
            app:title="@string/coverage_circle_color_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
