<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="general_upload_settings"
        app:title="@string/settings">

        <SwitchPreferenceCompat
            app:key="show_configuration_upload_dialog"
            android:defaultValue="true"
            app:title="@string/show_upload_dialog_pref_title"
            app:summaryOff="@string/show_upload_dialog_summary_off"
            app:summaryOn="@string/show_upload_dialog_summary_on" />

        <SwitchPreferenceCompat
            app:key="upload_retry_enabled"
            app:title="Retry Failed Uploads"
            app:summary="Automatically retry uploads on failure" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_cell_tower"
            app:key="new_tower_alerts_enabled"
            app:title="@string/new_tower_alerts_title"
            app:summaryOff="@string/new_tower_alerts_summary_off"
            app:summaryOn="@string/new_tower_alerts_summary_on" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="auto_start_community_upload_survey_at_boot"
            app:title="@string/auto_start_community_upload_survey_title"
            app:summaryOff="@string/auto_start_community_upload_survey_summary_off"
            app:summaryOn="@string/auto_start_community_upload_survey_summary_on" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="ocid_settings"
        app:title="OpenCelliD.org">

        <SwitchPreferenceCompat
            app:key="upload_to_opencellid"
            android:defaultValue="true"
            app:title="Upload to OpenCellID"
            app:summary="When enabled (and the Upload to Database survey is started), cellular survey records will be written to the database and then uploaded to OpenCelliD" />

        <SwitchPreferenceCompat
            app:key="anonymous_opencellid_upload"
            app:title="Anonymous Contribution"
            app:summaryOff="The OpenCelliD personal access token will be used"
            app:summaryOn="The shared access token will be used" />

        <EditTextPreference
            app:key="ocid_api_key"
            app:title="OpenCelliD Personal Access Token"
            app:summary="Enter your OpenCelliD API Key"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="Enter OpenCellID API Key"
            app:dialogMessage="Leave blank to upload anonymously"
            android:inputType="textPassword" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="beacondb_settings"
        app:title="BeaconDB">

        <SwitchPreferenceCompat
            app:key="upload_to_beacondb"
            android:defaultValue="true"
            app:title="Upload to BeaconDB"
            app:summary="When enabled (and the Upload to Database survey is started), cellular AND Wi-Fi survey records will be written to the database and then uploaded to BeaconDB" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="data_upload_management"
        app:title="Data Management">

        <Preference
            app:key="delete_all_data_in_upload_database"
            app:title="Delete all data waiting to be uploaded"
            app:summary="Deletes all data from the internal database that is waiting to be uploaded" />

    </PreferenceCategory>

</PreferenceScreen>
