<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/uploadDialogMessage"
            style="@style/DescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/x_small_margin"
            android:text="@string/upload_dialog_message" />

        <CheckBox
            android:id="@+id/checkOpenCellId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/x_small_margin"
            android:text="@string/upload_to_opencellid"
            android:paddingTop="16dp" />

        <CheckBox
            android:id="@+id/checkAnonymously"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/x_small_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/anonymously"
            android:paddingTop="16dp" />

        <TextView
            android:id="@+id/accessTokenWarningMessage"
            android:visibility="gone"
            style="@style/DescriptionText"
            android:textColor="@color/md_theme_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/x_small_margin"
            android:paddingBottom="@dimen/x_small_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/access_token_warning" />

        <CheckBox
            android:id="@+id/checkBeaconDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/x_small_margin"
            android:text="@string/upload_to_beacondb"
            android:paddingTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="@dimen/x_small_margin"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@color/colorAccentFaded" />

        <CheckBox
            android:id="@+id/checkRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/x_small_margin"
            android:text="@string/retry_on_failure"
            android:paddingTop="8dp" />

        <CheckBox
            android:id="@+id/checkDontShowAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/x_small_margin"
            android:text="@string/dont_show_again"
            android:paddingTop="8dp" />

    </LinearLayout>

</ScrollView>
